--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,11 +59,10 @@ jobs:
       - name: Deploy latest revision
         run: |
           # Get the latest revision number
-          LATEST_REV=$(apigeecli apis get --org ${{ secrets.APIGEE_ORG }} --name hello-world | jq -r '.revisions[-1]')
+          # LATEST_REV=$(apigeecli apis get --org ${{ secrets.APIGEE_ORG }} --name hello-world | jq -r '.revisions[-1]')
           echo "Deploying revision $LATEST_REV to environment ${{ secrets.APIGEE_ENV }}..."
           apigeecli apis deploy \
             --org ${{ secrets.APIGEE_ORG }} \
             --env ${{ secrets.APIGEE_ENV }} \
             --name hello-world \
-            --rev $LATEST_REV \
             --default-token
