--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,3 +66,4 @@ jobs:
             --env ${{ secrets.APIGEE_ENV }} \
             --name hello-world \
             --default-token
+            --ovr
