--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,30 +31,29 @@ jobs:
           which apigeecli
           apigeecli --help
 
-      # 5️⃣ Deploy all APIs in proxies/
       - name: Deploy all API proxies
         run: |
           mkdir -p apigee-bundles
-
+        
           for api in proxies/*; do
             if [ -d "$api/apiproxy" ]; then
               api_name=$(basename $api)
               echo "Processing API proxy: $api_name"
-
-              # Zip the API proxy
+        
+              # Zip the API proxy into apigee-bundles folder
               zip_file="apigee-bundles/${api_name}.zip"
               cd "$api"
               zip -r "../../$zip_file" apiproxy
               cd ../..
-
-              # Import the API proxy
+        
+              # Import the zip file (directly)
               echo "Importing $api_name ..."
               apigeecli apis import \
                 -f "$zip_file" \
                 --org ${{ secrets.APIGEE_ORG }} \
                 --default-token
-
-              # Deploy the latest revision
+        
+              # Deploy latest revision
               echo "Deploying $api_name ..."
               apigeecli apis deploy \
                 --org ${{ secrets.APIGEE_ORG }} \
@@ -64,3 +63,4 @@ jobs:
                 --default-token
             fi
           done
+
