--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,35 +41,39 @@ jobs:
             if [ -d "$api/apiproxy" ]; then
               api_name=$(basename $api)
               echo "Processing API proxy: $api_name"
-              
+
               # Zip the API proxy into apigee-bundles folder
               zip_file="apigee-bundles/${api_name}.zip"
               cd "$api"
               zip -r "../../$zip_file" apiproxy
               cd ../..
 
-              # Import the zip file directly
-              echo "Importing $api_name ..."
-              apigeecli apis import \
-                -f "$zip_file" \
-                --org ${{ secrets.APIGEE_ORG }} \
-                --default-token
+              # Verify the file exists
+              if [ -f "$zip_file" ]; then
+                echo "Importing $api_name ..."
+                apigeecli apis import \
+                  -f "${GITHUB_WORKSPACE}/$zip_file" \
+                  --org ${{ secrets.APIGEE_ORG }} \
+                  --default-token
+              else
+                echo "Error: $zip_file not found!"
+              fi
             fi
           done
 
       # 6️⃣ Deploy latest revision for all proxies
-      #- name: Deploy latest revision for all proxies
-       # run: |
+      - name: Deploy latest revision for all proxies
+        run: |
           # Loop through each proxy in apigee-bundles and deploy
-        #  for api in proxies/*; do
-         #   if [ -d "$api/apiproxy" ]; then
-          #    api_name=$(basename $api)
-           #   echo "Deploying $api_name ..."
-            #  apigeecli apis deploy \
-             #   --org ${{ secrets.APIGEE_ORG }} \
-              #  --env ${{ secrets.APIGEE_ENV }} \
-               # --name "$api_name" \
-                #--ovr \
-                # --default-token
-            #fi
-          #done
+          for api in proxies/*; do
+            if [ -d "$api/apiproxy" ]; then
+              api_name=$(basename $api)
+              echo "Deploying $api_name ..."
+              apigeecli apis deploy \
+                --org ${{ secrets.APIGEE_ORG }} \
+                --env ${{ secrets.APIGEE_ENV }} \
+                --name "$api_name" \
+                --ovr \
+                --default-token
+            fi
+          done
